--- a/index.html
+++ b/index.html
@@ -9,7 +9,17 @@
 <body>
     <h1>Maio Amarelo</h1>
     <img src="images.png" width="100%" alt="">
-    
-        
+    <h3>O que é Maio Amarelo?</h3>
+    <p>A campanha do Maio Amarelo envolve um movimento internacional criado com a finalidade de conscientizar e prevenir acidentes de trânsito. Com isso, são desenvolvidas ações com o objetivo de chamar a atenção de entidades de classe, governos, sociedade civil, federações e associações para os altos índices de mortos e feridos nas rodovias.
+    </p>
+   <h3>Quando surgiu o Maio Amarelo?</h3> 
+  <p>A ideia do Maio Amarelo surgiu a partir de estudos feitos pela Organização Mundial da Saúde (OMS) sobre a situação da segurança no trânsito em diversos países. Com isso, a Assembleia Geral das Nações Unidas (ONU) decidiu criar uma resolução definindo o período situado entre os anos de 2011 e 2020 como a “Década de Ações para a Segurança no Trânsito”. O foco era criar planos mundiais, assim como nacionais e regionais para evitar a morte de cinco milhões de pessoas.
+</p> 
+  <p>No Brasil, as campanhas do Maio Amarelo começaram em 2014. Por aqui, a iniciativa privada, o Poder Público e a sociedade civil se unem com a finalidade de discutir e criar estratégias voltadas para a segurança viária que ajudem a reduzir o número de mortes e acidentes.
+</p>
+<h3>Por que é importante?</h3>
+<p>Olhar para os números é a melhor maneira de entender a importância de movimentos como o Maio Amarelo. Para exemplificar, segundo dados do Registro Nacional de Acidentes e Estatísticas de Trânsito (RENAEST), órgão da Secretaria Nacional de Trânsito, apenas em 2021, morreram 11.647 pessoas devido a acidentes. Isso significa que, diariamente, 32 pessoas perderam suas vidas.
+</p>
+<p>Por isso, o Maio Amarelo constitui uma ferramenta fundamental para a educação de motoristas nas estradas, a propagação de informações e a ampliação das ações positivas por meio de debates e palestras, especialmente porque isso consegue envolver tanto o cidadão comum quanto aqueles que trabalham de forma direta com o setor de transportes.</p>
 </body>
 </html>
