--- a/index.html
+++ b/index.html
@@ -5,21 +5,41 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
+    <link rel="stylesheet" href="style.css">
 </head>
 <body>
     <h1>Maio Amarelo</h1>
     <img src="images.png" width="100%" alt="">
-    <h3>O que é Maio Amarelo?</h3>
+    
+    <h2>O que é Maio Amarelo?</h2>
     <p>A campanha do Maio Amarelo envolve um movimento internacional criado com a finalidade de conscientizar e prevenir acidentes de trânsito. Com isso, são desenvolvidas ações com o objetivo de chamar a atenção de entidades de classe, governos, sociedade civil, federações e associações para os altos índices de mortos e feridos nas rodovias.
     </p>
-   <h3>Quando surgiu o Maio Amarelo?</h3> 
+   
+    <h2>Quando surgiu o Maio Amarelo?</h2> 
   <p>A ideia do Maio Amarelo surgiu a partir de estudos feitos pela Organização Mundial da Saúde (OMS) sobre a situação da segurança no trânsito em diversos países. Com isso, a Assembleia Geral das Nações Unidas (ONU) decidiu criar uma resolução definindo o período situado entre os anos de 2011 e 2020 como a “Década de Ações para a Segurança no Trânsito”. O foco era criar planos mundiais, assim como nacionais e regionais para evitar a morte de cinco milhões de pessoas.
 </p> 
   <p>No Brasil, as campanhas do Maio Amarelo começaram em 2014. Por aqui, a iniciativa privada, o Poder Público e a sociedade civil se unem com a finalidade de discutir e criar estratégias voltadas para a segurança viária que ajudem a reduzir o número de mortes e acidentes.
 </p>
-<h3>Por que é importante?</h3>
+
+<h2>Por que é importante?</h2>
 <p>Olhar para os números é a melhor maneira de entender a importância de movimentos como o Maio Amarelo. Para exemplificar, segundo dados do Registro Nacional de Acidentes e Estatísticas de Trânsito (RENAEST), órgão da Secretaria Nacional de Trânsito, apenas em 2021, morreram 11.647 pessoas devido a acidentes. Isso significa que, diariamente, 32 pessoas perderam suas vidas.
 </p>
 <p>Por isso, o Maio Amarelo constitui uma ferramenta fundamental para a educação de motoristas nas estradas, a propagação de informações e a ampliação das ações positivas por meio de debates e palestras, especialmente porque isso consegue envolver tanto o cidadão comum quanto aqueles que trabalham de forma direta com o setor de transportes.</p>
+
+<h2>Quais são as práticas essenciais para uma direção segura?</h2>
+
+<h3>Ter cuidado nos dias de chuva</h3>
+<p>Para dirigir na chuva, os motoristas precisam ter sua atenção redobrada. Além da visão ser prejudicada, a água diminui a aderência dos pneus. No início das chuvas, é preciso ter ainda mais cuidado, pois a água misturada aos resíduos do asfalto pode deixar a pista muito mais escorregadia.
+ Diminuir a velocidade e acender o farol baixo, mesmo que esteja claro, são essenciais para a segurança, pois permite aos demais veículos verem que tem alguém passando.</p>
+
+ <h3>Manter-se em alerta</h3>
+<p>Muitos acidentes ocorrem devido à falta de atenção nas estradas. Não usar o celular, evitar distrações que tirem o foco e respeitar a sinalização são práticas simples, mas muito importantes para salvar vidas!</p>
+
+<h3>Respeitar os limites de velocidade</h3>
+<p>Antes de pisar no acelerador, é fundamental que o condutor conheça os limites de velocido que a lei diz, é sempre bom manter-se alerta, pois existem vários outros fatores que podem trazer problemas, como as condições da estrada e o fluxo do trânsito.</p>
+
+
+
+
 </body>
 </html>
